[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/MenuAssets/Home_hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/MenuAssets/Home_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/MenuAssets/Home_not_pressed.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/IndieFlower-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/IndieFlower-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -292, -195 )
color = Color( 0.345098, 0.537255, 0.533333, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -298.0
margin_right = 298.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="Master" type="Label" parent="ColorRect"]
margin_left = 72.0
margin_top = 147.0
margin_right = 249.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 4 )
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="ColorRect/Master"]
anchor_right = 1.381
anchor_bottom = 0.5
margin_left = 194.0
margin_top = 13.0
margin_right = 512.563
margin_bottom = 6.5
min_value = -20.0
max_value = 3.0
step = 0.1

[node name="SFX" type="Label" parent="ColorRect"]
margin_left = 72.0
margin_top = 200.0
margin_right = 249.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 4 )
text = "SFX Volume"

[node name="SFXSLider" type="HSlider" parent="ColorRect/SFX"]
anchor_right = 1.381
anchor_bottom = 0.5
margin_left = 194.0
margin_top = 13.0
margin_right = 512.563
margin_bottom = 6.5
min_value = -20.0
max_value = 3.0
step = 0.1

[node name="SFX2" type="Label" parent="ColorRect"]
margin_left = 72.0
margin_top = 245.0
margin_right = 249.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 4 )
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="ColorRect/SFX2"]
anchor_right = 1.381
anchor_bottom = 0.5
margin_left = 194.0
margin_top = 13.0
margin_right = 512.563
margin_bottom = 6.5
min_value = -20.0
max_value = 3.0
step = 0.1
value = -20.0

[node name="HomeBtn" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.658824 )
margin_left = 940.0
margin_top = 343.0
margin_right = 980.0
margin_bottom = 382.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 5

[connection signal="value_changed" from="ColorRect/Master/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/SFX/SFXSLider" to="." method="_on_SFXSLider_value_changed"]
[connection signal="value_changed" from="ColorRect/SFX2/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="HomeBtn" to="." method="_on_HomeBtn_pressed"]
